Refactoring adding track behaviour

--- a/app/views/tracks/_new_track.html.haml
+++ b/app/views/tracks/_new_track.html.haml
@@ -1,11 +1,12 @@
 .modal.fade#newTrackModal{tabindex: '-1', role: 'dialog', aria: {labelledby: 'myModalLabel', hidden: 'true'}}
   .modal-dialog
     .modal-content
-      = form_tag choose_tracks_path, 
-                 multipart: true, 
-                 class: 'form-horizontal', 
-                 role: 'form', 
-                 id: 'track_upload_form' do
+      = form_for @track_file, 
+                 remote: true,
+                 html: { multipart: true, 
+                         class: 'form-horizontal', 
+                         role: 'form', 
+                         id: 'track_upload_form' } do |f|
 
         .modal-header
           %button.close{type: 'button', data: {dismiss: 'modal'}}
@@ -13,87 +14,88 @@
               &times;
             %span.sr-only
               Close
-          %h4.modal-title#myModalLabel= t 'static_pages.index.track_form.title'
+          %h4.modal-title= t 'static_pages.index.track_form.title'
 
         .modal-body
-          .form-group
-            = label_tag :name, t('static_pages.index.track_form.name'), class: 'col-sm-3 control-label'
-            .col-sm-9
-              - if current_user
-                %p.form-control-static= current_user.profile.name
-              - else
-                = text_field_tag 'track[name]', 
-                                 nil, 
-                                 class: 'form-control', 
-                                 placeholder: t('static_pages.index.track_form.name_plh'), 
-                                 type: 'text',
-                                 value: recent_value(:name)
+          = f.fields_for :track_attributes do |builder|
+            .form-group
+              = builder.label :name, class: 'col-sm-3 control-label'
+              .col-sm-9
+                - if current_user
+                  %p.form-control-static= current_user.profile.name
+                - else
+                  = builder.text_field :name, 
+                    class: 'form-control', 
+                    placeholder: t('static_pages.index.track_form.name_plh'), 
+                    type: 'text',
+                    value: recent_value(:name)
+
+            .form-group
+              = builder.label :suit, t('activerecord.attributes.track.suit'), class: 'col-sm-3 control-label'
+              .col-sm-9
+                - recent_suit_id = recent_value(:suit_id)
+                - recent_suit_name = suit_name_by_id(recent_value(:suit_id))
+                = builder.select :wingsuit_id,
+                                 options_for_select([ [recent_suit_name, recent_suit_id] ], recent_suit_id),
+                                 { include_blank: true },
+                                 class: 'form-control new-track-wingsuit-select suit-group'
+
+                = builder.text_field :suit,
+                                     class: 'form-control suit-group',
+                                     placeholder: t('tracks.form.suit_text_placeholder'),
+                                     value: recent_suit_name,
+                                     style: ('display:none' if (recent_suit_id || !recent_suit_name))
+
+              .col-sm-9.col-sm-offset-3
+                %span
+                  %span.toggle-suit-caption= t('tracks.form.toggle_suit_caption')
+                  %a.toggle-suit{href: '#'}= t('tracks.form.toggle_suit_link')
+
+            .form-group
+              = builder.label :location, class: 'col-sm-3 control-label'
+              .col-sm-9
+                = builder.text_field :location, 
+                                     class: 'form-control', 
+                                     placeholder: t('static_pages.index.track_form.location_plh'), 
+                                     type: 'text',
+                                     value: recent_value(:location) 
+
+            .form-group
+              = builder.label :kind, class: 'col-sm-3 control-label'
+              .btn-group.col-sm-9{data: {toggle: 'buttons'}}
+                - recent_activity = recent_value(:activity)
+                %label.btn.btn-default{class: ('active' if (recent_activity == 'skydive' || recent_activity.nil?))}
+                  = builder.radio_button :kind, 'skydive'
+                  = 'Skydive'
+                %label.btn.btn-default{class: ('active' if recent_value(:activity) == 'base')}
+                  = builder.radio_button :kind, 'base'
+                  = 'B.A.S.E'
 
           .form-group
-            = label_tag :suit, t('static_pages.index.track_form.suit'), class: 'col-sm-3 control-label'
-            .col-sm-9
-              - recent_suit_id = recent_value(:suit_id)
-              - recent_suit_name = recent_value(:suit_name)
-              %select.new-track-wingsuit-select.suit-group{name: 'track[wingsuit_id]',
-                                                           style: ('display:none' if (!recent_suit_id && recent_suit_name))}
-                - if recent_suit_id
-                  %option{value: recent_suit_id}= Wingsuit.find(recent_suit_id).name
-              %input.form-control.suit-group{name: 'track[suit]',
-                                             type: 'text',
-                                             placeholder: t('tracks.form.suit_text_placeholder'),
-                                             value: recent_suit_name,
-                                             style: ('display:none' if (recent_suit_id || !recent_suit_name))}
-            .col-sm-9.col-sm-offset-3
-              %span
-                %span.toggle-suit-caption= t('tracks.form.toggle_suit_caption')
-                %a.toggle-suit{href: '#'}= t('tracks.form.toggle_suit_link')
-
-          .form-group
-            = label_tag :location, t('static_pages.index.track_form.location'), class: 'col-sm-3 control-label'
-            .col-sm-9
-              = text_field_tag 'track[location]', 
-                               nil, 
-                               class: 'form-control', 
-                               placeholder: t('static_pages.index.track_form.location_plh'), 
-                               type: 'text',
-                               value: recent_value(:location) 
-
-          .form-group
-            = label_tag :kind, t('static_pages.index.track_form.kind'), class: 'col-sm-3 control-label'
-            .btn-group.col-sm-9{data: {toggle: 'buttons'}}
-              - recent_activity = recent_value(:activity)
-              %label.btn.btn-default{class: ('active' if (recent_activity == 'skydive' || recent_activity.nil?))}
-                = radio_button_tag 'track[kind]', 'skydive', true
-                = 'Skydive'
-              %label.btn.btn-default{class: ('active' if recent_value(:activity) == 'base')}
-                = radio_button_tag 'track[kind]', 'base'
-                = 'B.A.S.E'
-
-          .form-group
-            = label_tag :file, t('static_pages.index.track_form.file'), class: 'col-sm-3 control-label'
+            = f.label :file, class: 'col-sm-3 control-label'
             .col-sm-9
               .input-group
                 %input.form-control{type: "text", readonly: true}
                 %span.input-group-btn
                   %span.btn.btn-default.btn-file
-                    Browse&hellip; 
-                    %input#track_file{name: 'track[file]', type: "file"}
+                    &hellip; 
+                    = f.file_field :file
 
           .form-group
             .col-sm-offset-3.col-sm-9
               %h4.help-block=t 'static_pages.index.track_form.help'
 
-          .form-group
-            = label_tag :comment, t('static_pages.index.track_form.comment'), class: 'col-sm-3 control-label'
-            .col-sm-9
-              = text_area_tag 'track[comment]', 
-                              nil, 
-                              class: 'form-control', 
-                              rows: 3, 
-                              cplaceholder: t('static_pages.index.track_form.comment_plh')
+          = f.fields_for :track_attributes do |builder|
+            .form-group
+              = builder.label :comment, t('activerecord.attributes.track.comment'), class: 'col-sm-3 control-label'
+              .col-sm-9
+                = builder.text_area :comment, 
+                                    class: 'form-control', 
+                                    rows: 3, 
+                                    placeholder: t('static_pages.index.track_form.comment_plh')
 
         .modal-footer
-          = submit_tag t('static_pages.index.track_form.submit'), class: 'btn btn-success'
+          = f.submit t('static_pages.index.track_form.submit'), class: 'btn btn-success'
           %button.btn.btn-default{type: 'button', data: {dismiss: 'modal'}}=t('general.cancel')
 
 - content_for :page_js do
