--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -32,3 +32,24 @@
     .form-group
       .col-sm-offset-2.col-sm-6
         = render 'users/shared/links'
+
+- content_for :page_js do
+  :coffeescript
+    $('.new-user-form').validate(
+      rules:
+        'user[name]':
+          minlength: 3,
+          required: true
+        'user[email]':
+          required: true,
+          email: true
+        'user[password]':
+          required: true
+        'user[password_confirmation]':
+          required: true,
+          equalTo: '.new-user-form #user_password'
+      highlight: (element) ->
+        $(element).closest('.form-group').addClass('has-error')
+      unhighlight: (element) ->
+        $(element).closest('.form-group').removeClass('has-error')
+    )
