--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -76,3 +76,17 @@
               %i.fa.fa-caret-down
             = lang_menu
 
+- content_for :page_js do
+  :coffeescript
+    $('.sign-in-form').validate(
+      rules:
+        'user[email]':
+          required: true,
+          email: true
+        'user[password]':
+          required: true
+      highlight: (element) ->
+        $(element).closest('.form-group').addClass('has-error')
+      unhighlight: (element) ->
+        $(element).closest('.form-group').removeClass('has-error')
+    )
