moved new track partial

--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -78,4 +78,4 @@
         %div.text-center
           Files in GPX format 
 
-= render partial: 'tracks/new_track'
+= render partial: 'track_files/new_modal'
