--- a/app/views/tracks/_track.html.haml
+++ b/app/views/tracks/_track.html.haml
@@ -1,34 +1,34 @@
-%tr.clickableRow{data: {url: track_path(id: track.id)}}
-  %td= track.id
-  %td= track_pilot(track)
-  %td
+= link_to track_path(id: track.id), class: 'tr track-row' do
+  .td= track.id
+  .td= track_pilot(track)
+  .td
     - if track.wingsuit
       = suit_presentation(track.wingsuit)
     - else 
       %span.text-info
         = track.suit
-  %td= track_place(track)
-  %td.text-muted= track.comment
-  %td.text-right
+  .td= track_place(track)
+  .td.text-muted= track.comment
+  .td.text-right
     - if track.distance_result && !track.distance_result.nan? && !track.distance_result.infinite? && !track.distance_result.zero?
       %span.text-info{data: {toggle: 'tooltip'}, title: "#{track.distance_range_from} - #{track.distance_range_to}"}
         = track.distance_result.to_i 
     - else
       %span.text-info
         &mdash;
-  %td.text-right
+  .td.text-right
     - if track.speed_result && !track.speed_result.nan? && !track.speed_result.infinite? && !track.speed_result.zero?
       %span.text-info{data: {toggle: 'tooltip'}, title: "#{track.speed_range_from} - #{track.speed_range_to}"}
         = track.speed_result.to_i
     - else
       %span.text-info
         &mdash;
-  %td.text-right
+  .td.text-right
     - if track.time_result && !track.time_result.nan? && !track.time_result.infinite? && !track.time_result.zero?
       %span.text-info{data: {toggle: 'tooltip'}, title: "#{track.time_range_from} - #{track.time_range_to}"}
         = track.time_result.round(1)
     - else
       %span.text-info
         &mdash;
-  %td.text-info= track.recorded_at.strftime('%d.%m.%Y')
-  %td= track_icons(track)
+  .td.text-info= track.recorded_at.strftime('%d.%m.%Y')
+  .td= track_icons(track)
