--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -5,6 +5,10 @@ $table-border-width: 1px;
 
 .table   { display: table; }
 
+.table-hover > .tbody > .tr:hover {
+  background-color: #f5f5f5;
+}
+
 .thead   {
   display: table-header-group;
 
@@ -30,5 +34,5 @@ $table-border-width: 1px;
 .table > thead > tr > th,
 .table > .thead > .tr > .th {
   color: $table-head-color ;
-  font-weight: normal;
+  font-weight: bold;
 }
