--- a/app/views/tracks/_table_header.html.haml
+++ b/app/views/tracks/_table_header.html.haml
@@ -3,24 +3,24 @@
   order_field = (params_order[0] || 'id').upcase
   order_direction = (params_order[1] || 'DESC').upcase
 
-%tr
-  %th
+.tr
+  .th
     =t 'activerecord.attributes.track.id'
     =tracks_sort_header(order_field, order_direction, 'id', 'ID')
-  %th=t 'activerecord.attributes.track.name'
-  %th=t 'activerecord.attributes.track.suit'
-  %th=t 'activerecord.attributes.track.place'
-  %th=t 'activerecord.attributes.track.comment'
-  %th.result-head.text-right
+  .th=t 'activerecord.attributes.track.name'
+  .th=t 'activerecord.attributes.track.suit'
+  .th=t 'activerecord.attributes.track.place'
+  .th=t 'activerecord.attributes.track.comment'
+  .th.result-head.text-right
     =t 'disciplines.distance'
     =tracks_sort_header(order_field, order_direction, 'distance_result', 'Distance')
-  %th.result-head.text-right
+  .th.result-head.text-right
     =t 'disciplines.speed'
     =tracks_sort_header(order_field, order_direction, 'speed_result', 'Speed')
-  %th.result-head.text-right
+  .th.result-head.text-right
     =t 'disciplines.time'
     =tracks_sort_header(order_field, order_direction, 'time_result', 'Time')
-  %th
+  .th
     =t 'activerecord.attributes.track.recorded_at'
     =tracks_sort_header(order_field, order_direction, 'recorded_at', 'Recorded at')
-  %th
+  .th
