ability to upload track from any place

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,6 +38,9 @@
       -# Modal for Backbone Views
       .modal.fade#modal{tabindex: '-1', role: 'dialog', aria: {labelledby: 'myModalLabel', hidden: 'true'}}
 
+      -# new track modal
+      = render partial: 'track_files/new_modal'
+
     = render 'errors/ajax_error_message'
     = render 'layouts/footer'
     = javascript_include_tag 'application', 'data-turbolinks-track' => true, 'data-turbolinks-eval' => false
