--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,3 @@
-.navbar.navbar-default.navbar-static-top{role: 'navigation'}
 .navbar.navbar-default.navbar-fixed-top{role: 'navigation'}
   .container
     .navbar-header
@@ -23,14 +22,18 @@
            
       %ul.nav.navbar-nav.navbar-right
 
+        %li.nav-upload-button
+          %a.btn.btn-default{href: '#', data: {toggle: 'modal', target: '#newTrackModal'}}
+            %i.fa.fa-upload
+
         - if user_signed_in?
           %li.dropdown
             %a.dropdown-toggle.profile-dropdown{href: '#', data: {toggle: 'dropdown'}}
               - if current_user.profile
-                = image_tag current_user.profile.userpic.url(:thumb), id: 'userpic-thumb', :class => 'img-rounded img-50 loading-bg'
+                = image_tag current_user.profile.userpic.url(:thumb), id: 'userpic-thumb', class: 'img-rounded img-50 loading-bg'
               - else
                 = current_user.email
-                = image_tag '/images/thumb/missing.png', id: 'userpic-thumb', :class => 'img-rounded img-50 loading-bg'
+                = image_tag '/images/thumb/missing.png', id: 'userpic-thumb', class: 'img-rounded img-50 loading-bg'
 
             %ul.dropdown-menu
               - if current_user.has_role? :admin
@@ -39,29 +42,29 @@
               %li
                 = link_to t('application.header.profile'), profile_path(current_user.profile)
               %li
-                = link_to t('application.header.sign_out'), destroy_user_session_path, :method => :delete
+                = link_to t('application.header.sign_out'), destroy_user_session_path, method: :delete
         - else
           %li.dropdown
-            %a.dropdown-toggle{:href => '#', :data => {:toggle => 'dropdown'}}
+            %a.dropdown-toggle{href: '#', data: {toggle: 'dropdown'}}
               =t 'application.header.sign_in'
               %i.fa.fa-caret-down'
             %ul.dropdown-menu.login-menu
               %li
                 .row
                   .col-md-12
-                    = form_for(:user, :url => session_path(:user), :html => {:class => 'form sign-in-form', :role => 'form'}) do |f|
+                    = form_for(:user, url: session_path(:user), html: {class: 'form sign-in-form', role: 'form'}) do |f|
                       .form-group
-                        = label_tag 'user_email', 'Email address', :for => 'user_email', :class => 'sr-only'
-                        = f.text_field :email, :class => 'form-control', :type => 'email', :placeholder => t('application.header.login_email')
+                        = label_tag 'user_email', 'Email address', for: 'user_email', class: 'sr-only'
+                        = f.text_field :email, class: 'form-control', type: 'email', placeholder: t('application.header.login_email')
                       .form-group
-                        = label_tag 'user_password', 'Password', :for => 'user_password', :class => 'sr-only'
-                        = f.password_field :password, :class => 'form-control', :placeholder => t('application.header.password')
+                        = label_tag 'user_password', 'Password', for: 'user_password', class: 'sr-only'
+                        = f.password_field :password, class: 'form-control', placeholder: t('application.header.password')
                       .checkbox
                         %label
                           = f.check_box :remember_me, checked: true
                           =t('application.header.remember_me')
                       .form-group
-                        = f.submit t('application.header.sign_in'), :class => 'btn btn-success btn-block'
+                        = f.submit t('application.header.sign_in'), class: 'btn btn-success btn-block'
                     = link_to t('application.header.forgot_pass'), new_password_path(:user)
                   %hr
                   .col-sm-12.hidden-md
@@ -69,12 +72,11 @@
           %li.hidden-sm.sign-in
             = link_to t('application.header.sign_up'), new_user_registration_path
 
-        - unless controller.controller_name.eql? 'track_select'
-          %li.dropdown
-            %a.dropdown-toggle.locale-dropdown{href: '#', data: {toggle: 'dropdown'}}
-              = image_tag asset_path('blank.gif'), class: "flag flag-#{ I18n.locale}"
-              %i.fa.fa-caret-down
-            = lang_menu
+        %li.dropdown
+          %a.dropdown-toggle.locale-dropdown{href: '#', data: {toggle: 'dropdown'}}
+            = image_tag asset_path('blank.gif'), class: "flag flag-#{ I18n.locale}"
+            %i.fa.fa-caret-down
+          = lang_menu
 
 - content_for :page_js do
   :coffeescript
