--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,7 +45,7 @@ a, button, label, span {
   height: auto !important;
   height: 100%;
   margin: 0 auto -61px;
-  padding: 0 0 60px;
+  padding: 50px 0 60px;
 }
 
 label.valid {
