--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -22,7 +22,7 @@
            
       %ul.nav.navbar-nav.navbar-right
 
-        %li.nav-upload-button
+        %li.nav-upload-button{data: {toggle: 'tooltip', placement: 'left'}, title: t('application.header.upload_track')}
           %a.btn.btn-default{href: '#', data: {toggle: 'modal', target: '#newTrackModal'}}
             %i.fa.fa-upload
 
