added ability to update event visibility

--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -17,9 +17,9 @@
         %span.comp-name= event.name
 
       - if event.unlisted_event?
-        %i.fa.fa-eye-slash{'data-toggle': 'tooltip', title: t('tracks.edit.unlisted')}
+        %i.fa.fa-eye-slash{'data-toggle': 'tooltip', title: t('visibility.unlisted')}
       - elsif event.private_event?
-        %i.fa.fa-lock{'data-toggle': 'tooltip', title: t('tracks.edit.private')}
+        %i.fa.fa-lock{'data-toggle': 'tooltip', title: t('visibility.private')}
 
       - if event.is_official
         %small
