--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -61,6 +61,20 @@
             Hungary Boogie 
 
     .form-group
+      = f.label :visibility, class: 'control-label col-sm-4'
+      .btn-group.col-sm-8{data: {toggle: 'buttons'}}
+        %label.btn.btn-default{ class:  ('active' if @event.public_event?) }
+          = f.radio_button 'visibility', 'public_event'
+          = t('visibility.public')
+        %label.btn.btn-default{ class:  ('active' if @event.unlisted_event?) }
+          = f.radio_button 'visibility', 'unlisted_event'
+          = t('visibility.unlisted')
+        %label.btn.btn-default{ class:  ('active' if @event.private_event?) }
+          = f.radio_button 'visibility', 'private_event'
+          = t('visibility.private')
+        
+
+    .form-group
       = f.label :wind_cancellation, class: 'control-label col-sm-4'
       .btn-group.col-sm-8{data: {toggle: 'buttons'}}
         %label.btn.btn-default{class: ('active' unless @event.wind_cancellation)}
